// SPDX-FileCopyrightText: 2025 Carnegie Mellon University - Living Edge Lab
//
// SPDX-License-Identifier: GPL-2.0-only

syntax = "proto3";
package protocol.testing;

/*
 * Types of test messages for testing infrastructure
 */
enum ServiceType {
  CORE_SERVICES = 0;
  STREAM_SERVICES = 1;
  MISSION_SERVICE = 2;
  DRIVER_CONTROL_SERVICE = 3;
}

message ServiceReady {
  // Indicates which service is ready for testing
  ServiceType readied_service = 1;
}
